--- a/site/news.html.in
+++ b/site/news.html.in
@@ -34,6 +34,18 @@
     !-->
 
   <dt>
+    <b>LilyPond 2.11.46 available</b> -
+    <em>May 22, 2008</em>
+  </dt>
+  <dd>
+    Release 2.11.45 fixes a lot of bugs and includes a rewrite of
+    dynamics engravers.  Support for slur-shaped arpeggios has been added.
+    <a href="@DOC@v2.11/Documentation/topdocs/NEWS.html">Changes</a>,
+    <a href="http://code.google.com/p/lilypond/issues/list?can=1&amp;q=fixed_2_11_46&amp;colspec=ID+Type+Status+Priority+Milestone+Owner+Summary">Bugfixes</a>,
+    <a href="install/#2.11">Download</a>.
+  </dd>
+
+  <dt>
     <b>RSS feed</b> - <em>May 21, 2008</em>
   </dt>
   <dd>
@@ -85,7 +97,7 @@
     <a href="install/#2.11">Download</a>.
   </dd>
 
-  <dt class="sticky"><b>lilypond.org日本語訳 (lilypond.org Japanese translation)</b> -
+  <dt><b>lilypond.org日本語訳 (lilypond.org Japanese translation)</b> -
     <em>2008年4月8日</em>  <!-- April 4, 2008 -->
   </dt>
 
