--- a/site/news.html.in
+++ b/site/news.html.in
@@ -49,11 +49,11 @@
     <b>RSS feed</b> - <em>May 21, 2008</em>
   </dt>
   <dd>
-    <p>A RSS feed is now available on lilypond.org.  It contains all
+    A RSS feed is now available on lilypond.org.  It contains all
     news announced on the web site start page: releases, LilyPond
     report, new translations of the site and publications.
     <a href="http://lilypond.org/web/lilypond-rss-feed.xml">Feed
-    URL</a>.</p>
+    URL</a>.
 
     <p>The mailing list <a
     href="http://mail.gnu.org/mailman/listinfo/info-lilypond">info-lilypond</a>
@@ -244,13 +244,6 @@ href="http://code.google.com/p/lilypond/issues/list?can=1&amp;q=fixed_2_11_30&am
     do <em>sh lilypond-2.11.28-1.freebsd-64.sh</em> in a command window.
   </dd>
 
-<dd> Release 2.11.28 is now available as a binary installer for
-  FreeBSD x86_64.  Download
-<a href="http://lilypond.org/download/binaries/freebsd-64/lilypond-2.11.28-1.freebsd-64.sh">the installer</a> and 
-do <em>sh lilypond-2.11.28-1.freebsd-64.sh</em> in a command window.
-</dd>
->
-
 <dt><b>LilyPond 2.11.28 available</b> - <em>July 25,
 2007</em></dt>
 
@@ -295,7 +288,7 @@ href="http://code.google.com/p/lilypond/issues/list?can=1&amp;q=fixed_2_10_23&am
 
 </dd>
 
-<dt><b>Traducci&oacute;n de la documentaci&oacute;n al espa&ntilde;ol</b> - 
+<dt class="sticky"><b>Traducci&oacute;n de la documentaci&oacute;n al espa&ntilde;ol</b> - 
     <em>10 de abril de 2007</em>
 </dt>
 <dd>Se han traducido la p&aacute;gina web, el manual de aprendizaje
