--- a/site/news.html.in
+++ b/site/news.html.in
@@ -35,7 +35,7 @@
 
   <dt>
     <b>The LilyPond Report #10</b> -
-    <em>June 1st, 2008</em>
+    <em>June 2, 2008</em>
   </dt>
   <dd>
     Welcome to this special tenth issue of the <em>LilyPond Report</em>, entirely dedicated to Algorithmic Composition systems.<br>
