--- a/site/news.html.in
+++ b/site/news.html.in
@@ -34,6 +34,15 @@
     !-->
 
   <dt>
+    <b>The LilyPond Report #11</b> -
+    <em>June 9, 2008</em>
+  </dt>
+  <dd>
+    This short, informal, weekly opinion column is about the LilyPond project: its team, its world, its community.
+    Follow <a href="http://valentin.villenave.info/The-LilyPond-Report-11">this link</a> to read the full issue...
+  </dd>
+
+  <dt>
     <b>The LilyPond Report #10</b> -
     <em>June 2, 2008</em>
   </dt>
