Docs: First proof-of-concept attempt to add AJAX search field to the docs
-) Add a search field to the toc pane in our docs. If the user types three
   letters or more, an AJAX request is sent to the server to perform a
	 search. The AJAX part is implemented in JS, the serach part itself is
	 implemented in PHP on the server side, which wades through a pre-generated
	 index file (pure text).
-) The texi2html init file now has the ability to create our own search
   index file, but I haven't yet decided on the final format: pure text (the
	 search script in php would have to load that in memory for each
	 request!) or sql (for which we need a database!), etc...
	 for now, I already create some .idx files as tab-separated files, which are
	 then parsed by the php search script.
-) If the user has JavaScript disabled or if the files are viewed as
   static pages (and not over http), then no search box is shown (or
	 rather, the search box is printed via JS only if JS is enabled and
	 the protocol is http)

So, the proof of concept works for now. We only need to decide how to build
and how to keep our search index. Right now, it's a pure text file, which is
parsed line-for-line for each request (resource-heavy?). The other drawback
is that the "search" for now only searches for substrings of index entries
in the texinfo index entry texts, not in the full text!

--- a/Documentation/user/GNUmakefile
+++ b/Documentation/user/GNUmakefile
@@ -9,6 +9,7 @@ EXTRA_DIST_FILES += README.txt writing-texinfo.txt policy.txt writing-sections.t
 IMAGES=$(call src-wildcard,*.png)
 EPS_ILLUSTRATIONS=context-example.eps
 PDF_ILLUSTRATIONS=context-example.pdf
+PHP_FILES=$(call src-wildcard,*.php)
 
 OUT_PDF_IMAGES=$(IMAGES:%.png=$(outdir)/%.pdf) $(addprefix $(outdir)/,$(PDF_ILLUSTRATIONS))
 
@@ -17,6 +18,8 @@ OUT_PNG_IMAGES=$(OUT_PDF_IMAGES:%.pdf=%.png)
 OUT_MASTER_TEXI_FILES = $(outdir)/lilypond-internals.texi
 OUT_TEXI_FILES=$(ITEXI_FILES:%.itexi=$(outdir)/%.texi)\
  $(ITELY_FILES:%.itely=$(outdir)/%.texi)
+OUT_JS_FILES= $(JS_FILES:%.js=$(outdir)/%.js)
+OUT_PHP_FILES=$(PHP_FILES:%.php=$(outdir)/%.php)
 
 HTML_FILES = $(TELY_FILES:%.tely=$(outdir)/%-big-page.html)\
  $(outdir)/lilypond-internals-big-page.html
@@ -124,9 +127,15 @@ $(outdir)/%/source:
 
 local-WWW-1: $(MASTER_TEXI_FILES) $(PDF_FILES) info
 
-local-WWW-2: $(HTML_FILES) $(DEEP_HTML_FILES) $(source-links)
+local-WWW-2: $(HTML_FILES) $(OUT_JS_FILES) $(OUT_PHP_FILES) $(DEEP_HTML_FILES) $(source-links)
 
 $(outdir)/%.bib: %.bib
+	ln -f $< $@
+
+$(outdir)/%.js: %.js
+	ln -f $< $@
+
+$(outdir)/%.php: %.php
 	ln -f $< $@
 
 # lilypond.texi deps
